# genro-proxy

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CLAUDE_FOR_GENROPROXY_USERS.md  GENROPROXY_DEV_GUIDE.md  NOTICE  README.md  docker-compose.yml  pyproject.toml
docs/: SQL_METHODS_ANALYSIS.md  admin-ui.rst  architecture.rst  conf.py  configuration.rst  getting-started.rst  index.rst  quickstart.rst
docs/api/: entities.rst  interface.rst  proxy.rst  sql.rst
docs/extending/: endpoints.rst  overview.rst  proxy.rst  tables.rst
src/genro_proxy/: __init__.py  encryption.py  proxy_base.py  proxy_endpoint.py  server.py
src/genro_proxy/entities/: __init__.py
src/genro_proxy/entities/account/: endpoint.py
src/genro_proxy/entities/command_log/: __init__.py  endpoint.py
src/genro_proxy/entities/instance/: __init__.py  endpoint.py  table.py
src/genro_proxy/entities/storage/: endpoint.py  table.py
src/genro_proxy/entities/tenant/: __init__.py  endpoint.py  table.py
src/genro_proxy/interface/: README.md  __init__.py  api_base.py  cli_base.py  cli_context.py  endpoint_base.py  repl.py
src/genro_proxy/sql/: README.md  __init__.py  query.py  sqldb.py  table.py
src/genro_proxy/sql/adapters/: __init__.py  base.py  sqlite.py
src/genro_proxy/storage/: node.py
src/proxy/: __init__.py  __main__.py  cli.py  encryption.py  proxy_base.py  proxy_config.py  server.py
src/proxy/entities/: __init__.py
src/proxy/entities/account/: __init__.py  endpoint.py  table.py
src/proxy/entities/command_log/: __init__.py  endpoint.py  table.py
src/proxy/entities/instance/: __init__.py  endpoint.py  table.py
src/proxy/entities/storage/: __init__.py  endpoint.py  table.py
src/proxy/entities/tenant/: __init__.py  endpoint.py  table.py
src/proxy/interface/: README.md  __init__.py  api_base.py  cli_base.py  cli_context.py  endpoint_base.py  repl.py
src/proxy/sql/: README.md  __init__.py  query.py  sqldb.py  table.py
src/proxy/sql/adapters/: __init__.py  postgresql.py
src/proxy/storage/: __init__.py
src/proxy/tools/: __init__.py
src/proxy/tools/http_client/: __init__.py
src/proxy/tools/prometheus/: __init__.py
tests/: __init__.py  test_encryption.py  test_prometheus_metrics.py
tests/interface/: test_api_base.py  test_cli_base.py  test_cli_context.py  test_endpoint_base.py  test_repl.py
tests/proxy/: __init__.py  test_proxy_base.py  test_proxy_config.py
tests/proxy/entities/: __init__.py
tests/proxy/entities/account/: __init__.py  conftest.py  test_endpoint.py  test_table.py
tests/proxy/entities/command_log/: __init__.py  conftest.py  test_endpoint.py  test_table.py
tests/proxy/entities/instance/: conftest.py  test_endpoint.py  test_table.py
tests/proxy/entities/storage/: conftest.py  test_endpoint.py  test_table.py
tests/proxy/entities/tenant/: conftest.py  test_endpoint.py  test_table.py
tests/proxy/storage/: test_node.py
tests/sql/: conftest.py  test_adapters.py  test_query.py  test_sqldb.py  test_table.py
tests/storage/: conftest.py  test_cloud.py  test_init.py  test_manager.py  test_node.py
tests/tools/: test_encryption.py  test_prometheus_metrics.py  test_repl.py
ui/: index.html
