# Copyright 2025 Softwell S.r.l.
# Licensed under the Apache License, Version 2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genro-proxy"
version = "0.1.0"
description = "Base proxy package for Genro microservices with SQL, storage, and API infrastructure."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Genropy Team", email = "info@genropy.org"}
]
keywords = [
    "proxy",
    "microservice",
    "fastapi",
    "async",
    "genro",
    "genropy"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "prometheus-client>=0.20.0",
    "cryptography>=41.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "httpx>=0.27.0",
]
postgresql = [
    "psycopg[binary]>=3.1.0",
    "psycopg-pool>=3.1.0",
]
s3 = ["s3fs>=2024.1.0"]
gcs = ["gcsfs>=2024.1.0"]
azure = ["adlfs>=2024.1.0"]
cloud = ["genro-proxy[s3,gcs,azure]"]
all = ["genro-proxy[dev,postgresql,cloud]"]

[project.urls]
Homepage = "https://github.com/genropy/genro-proxy"
Documentation = "https://genro-proxy.readthedocs.io"
Repository = "https://github.com/genropy/genro-proxy"
Issues = "https://github.com/genropy/genro-proxy/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/proxy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["_build", "docs/_build", "docs", ".git"]
addopts = "-v --cov=proxy --cov-report=term-missing"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long
    "B008",   # no function calls in arg defaults
]

[tool.ruff.lint.isort]
known-first-party = ["proxy"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
files = ["src/proxy"]

[tool.coverage.run]
source = ["src/proxy"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "\\.\\.\\.",
]

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = [
    "B101",  # assert warnings (OK in production code)
    "B104",  # binding 0.0.0.0 (intentional for containers)
    "B324",  # MD5 warning (used for cache keys, not security)
]
